[package]
name = "mate"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mate"
path = "src/main.rs"

[[bin]]
name = "mate-collector"
path = "src/collector/main.rs"

[[bin]]
name = "mate-api"
path = "src/api/main.rs"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "^3.0.0-rc.11", features = ["derive", "env"] }
env_logger = "~0.9.0"
futures = { version = "0.3.19", default-features = false, features = ["async-await"] }
hyper = {version = "0.14", features = ["full"]}
log = "~0.4.14"
serde_json = "1.0.72"
route-recognizer = "0.2"
serde = {version = "1.0", features = ["derive"] }
tda-sdk = "0.1.2"
tokio = { version = "1", features = ["full"] }
