[package]
name = "mate"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mate"
path = "src/main.rs"

[[bin]]
name = "mate-collector"
path = "collector/src/main.rs"

[[bin]]
name = "mate-api"
path = "api/src/main.rs"

[dependencies]
accounts = {path = "./crates/accounts", version = "0.1.0"}
async-trait = "0.1"
bytes = "1"
clap = { version = "^3.0.0-rc.11", features = ["derive", "env"] }
chrono = "0.4"
futures = { version = "0.3.19", default-features = false, features = ["async-await"] }
hyper = { version = "0.14", features = ["full"] }
log = "~0.4.14"
matelog = {path = "./crates/matelog", version = "0.1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
route-recognizer = "0.2"
ta = {path = "./crates/ta", version = "0.1.0"}
tda-sdk = "0.1.2"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
  "crates/accounts",
  "crates/matelog",
  "crates/ta",
  "collector",
  "api",
]
