[package]
name = "mate"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mate"
path = "src/main.rs"

[[bin]]
name = "mate-collector"
path = "collector/src/main.rs"

[[bin]]
name = "mate-api"
path = "api/src/main.rs"

[dependencies]
accounts = {path = "./crates/accounts", version = "0.1.0"}
actix-cors = "0.5.4"
actix-rt = "1"
actix-web = "3.3"
async-std = "1.6.3"
async-trait = "0.1"
bytes = "1"
clap = { version = "^3.0.0-rc.11", features = ["derive", "env"] }
chrono = { version = "0.4", features = [ "serde" ] }
diesel = { version = "1.4.4", features = [ "chrono", "postgres" ] }
futures = "0.3.5"
log = "~0.4.14"
matelog = {path = "./crates/matelog", version = "0.1.0"}
rust-s3 = { version = "0.28.0", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ta = {path = "./crates/ta", version = "0.1.0"}
tda-sdk = "0.1.2"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
  "crates/accounts",
  "crates/matelog",
  "crates/ta",
  "collector",
  "api",
]
